# pandas-dataclasses

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  genindex.html  index.html  objects.inv  package-lock.json  py-modindex.html  pyproject.toml  search.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: pandas_dataclasses.core.api.doctree  pandas_dataclasses.core.doctree  pandas_dataclasses.core.specs.doctree  pandas_dataclasses.core.tagging.doctree  pandas_dataclasses.core.typing.doctree  pandas_dataclasses.doctree  pandas_dataclasses.extras.doctree  pandas_dataclasses.extras.hints.doctree  pandas_dataclasses.extras.new.doctree
.github/workflows/: docs.yaml  tests.yml
_apidoc/: pandas_dataclasses.core.api.html  pandas_dataclasses.core.html  pandas_dataclasses.core.specs.html  pandas_dataclasses.core.tagging.html  pandas_dataclasses.core.typing.html  pandas_dataclasses.extras.hints.html  pandas_dataclasses.extras.html  pandas_dataclasses.extras.new.html  pandas_dataclasses.html
_modules/: index.html
_modules/pandas_dataclasses/core/: api.html  specs.html  tagging.html  typing.html
_modules/pandas_dataclasses/extras/: new.html
_sources/_apidoc/: pandas_dataclasses.core.api.rst.txt  pandas_dataclasses.core.rst.txt  pandas_dataclasses.core.specs.rst.txt  pandas_dataclasses.core.tagging.rst.txt  pandas_dataclasses.extras.rst.txt  pandas_dataclasses.rst.txt
docs/: build  conf.py  index.md
pandas_dataclasses/: __init__.py  core.py  dataframe.py  dataspec.py  series.py  specs.py  typing.py
pandas_dataclasses/core/: __init__.py  api.py  asdata.py  aspandas.py  frame.py  generic.py  mixins.py  parsers.py  series.py  specs.py  tagging.py  typing.py
pandas_dataclasses/extras/: __init__.py  hints.py  new.py
pandas_dataclasses/pandas/: __init__.py  common.py  frame.py  generic.py  series.py
tests/: data.py  test_asdata.py  test_aspandas.py  test_core.py  test_core_api.py  test_core_specs.py  test_core_tagging.py  test_core_typing.py  test_dataspec.py  test_extras_new.py  test_frame.py  test_frame_generic.py  test_mixins.py  test_parsers.py  test_root.py  test_series.py  test_series_generic.py  test_specs.py  test_typing.py
v1.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.0.0/.doctrees/: environment.pickle  index.doctree
v1.0.0/.doctrees/_apidoc/: pandas_dataclasses.core.api.doctree  pandas_dataclasses.core.doctree  pandas_dataclasses.core.specs.doctree  pandas_dataclasses.core.tagging.doctree  pandas_dataclasses.core.typing.doctree  pandas_dataclasses.doctree  pandas_dataclasses.extras.doctree  pandas_dataclasses.extras.hints.doctree  pandas_dataclasses.extras.new.doctree
v1.0.0/_apidoc/: pandas_dataclasses.core.api.html  pandas_dataclasses.core.html  pandas_dataclasses.core.specs.html  pandas_dataclasses.core.tagging.html  pandas_dataclasses.core.typing.html  pandas_dataclasses.extras.hints.html  pandas_dataclasses.extras.html  pandas_dataclasses.extras.new.html  pandas_dataclasses.html
v1.0.0/_modules/: index.html
v1.0.0/_modules/pandas_dataclasses/core/: api.html  specs.html  tagging.html  typing.html
v1.0.0/_modules/pandas_dataclasses/extras/: new.html
v1.0.0/_sources/_apidoc/: pandas_dataclasses.core.rst.txt  pandas_dataclasses.core.typing.rst.txt  pandas_dataclasses.extras.hints.rst.txt  pandas_dataclasses.extras.new.rst.txt  pandas_dataclasses.extras.rst.txt  pandas_dataclasses.rst.txt
