[tool.poetry]
name = "pandas-dataclasses"
version = "0.12.0"
description = "pandas data creation made easy by dataclass"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["pandas", "dataclass", "series", "dataframe", "typing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/astropenguin/pandas-dataclasses/"
documentation = "https://astropenguin.github.io/pandas-dataclasses/"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.20"
pandas = "^1.5 | ^2.0"
pandas-stubs = "^1.5 | ^2.0"
typing-extensions = "^4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7"
ipython = "^8.14"
mypy = "~1.4"
myst-parser = "^2.0"
pydata-sphinx-theme = "^0.13"
pyright = "^1.1"
pytest = "^7.4"
sphinx = "^7.2"

[tool.mypy]
strict = true
warn_no_return = false
warn_unused_ignores = false

[tool.pyright]
reportUnknownArgumentType = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryIsInstance = "warning"
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
