[project]
name = "pandas-dataclasses"
version = "1.0.0"
description = "pandas data creation by data classes"
readme = "README.md"
keywords = ["dataclasses", "specifications", "typing", "pandas"]
requires-python = ">=3.9,<3.14"
dependencies = [
    "numpy>=1.22,<3.0",
    "pandas>=1.5,<3.0",
    "pandas-stubs>=1.5,<3.0",
    "typing-extensions>=4.1,<5.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://astropenguin.github.io/pandas-dataclasses/v1.0.0"
repository = "https://github.com/astropenguin/pandas-dataclasses"

[dependency-groups]
dev = [
    "black>=24.8",
    "ipython>=8.18",
    "myst-parser>=3.0",
    "pydata-sphinx-theme>=0.16",
    "pyright>=1.1",
    "pytest>=8.3",
    "sphinx>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportUnknownArgumentType = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryIsInstance = "warning"
typeCheckingMode = "strict"
